// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DappPage render should render error 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input name="url" data-vv-name="url" placeholder="Enter dapp url..." class-name="dapp-form-input" data-vv-as="Dapp url" data-test="dapp-url-input" v-validate="'required|url:require_protocol:true:require_tld:false'" v-model="url" aria-required="true"
                    aria-invalid="false">
                    <div slot="addon" class="control">
                        <button disabled="disabled" data-test="dapp-open-button" v-on:click="bound openDapp" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input>
            </div>
            <!---->
            <p class="dapp-error help is-danger">
                Page is not loaded. Try load other page or reload current.
            </p>
        </div>
    </div>
    <!---->
</div>
`;

exports[`DappPage render should render iframe if it loading but it must be hidden 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input name="url" data-vv-name="url" placeholder="Enter dapp url..." class-name="dapp-form-input" data-vv-as="Dapp url" data-test="dapp-url-input" v-validate="'required|url:require_protocol:true:require_tld:false'" v-model="url" aria-required="true"
                    aria-invalid="false" disabled="true">
                    <div slot="addon" class="control">
                        <button disabled="disabled" data-test="dapp-open-button" v-on:click="bound openDapp" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input>
            </div>
            <iframe src="https://wildproxy-dev.endpass.com/" class="dapp-frame" style="display: none;"></iframe>
            <!---->
        </div>
    </div>
    <!---->
</div>
`;

exports[`DappPage render should render iframe it loaded 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input name="url" data-vv-name="url" placeholder="Enter dapp url..." class-name="dapp-form-input" data-vv-as="Dapp url" data-test="dapp-url-input" v-validate="'required|url:require_protocol:true:require_tld:false'" v-model="url" aria-required="true"
                    aria-invalid="false">
                    <div slot="addon" class="control">
                        <button disabled="disabled" data-test="dapp-open-button" v-on:click="bound openDapp" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input>
            </div>
            <iframe src="https://wildproxy-dev.endpass.com/" class="dapp-frame"></iframe>
            <!---->
        </div>
    </div>
    <!---->
</div>
`;

exports[`DappPage render should render password modal if currentRequest exists 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input name="url" data-vv-name="url" placeholder="Enter dapp url..." class-name="dapp-form-input" data-vv-as="Dapp url" data-test="dapp-url-input" v-validate="'required|url:require_protocol:true:require_tld:false'" v-model="url" aria-required="true"
                    aria-invalid="false">
                    <div slot="addon" class="control">
                        <button disabled="disabled" data-test="dapp-open-button" v-on:click="bound openDapp" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input>
            </div>
            <!---->
            <!---->
        </div>
    </div>
    <password-modal title="Opened dapp requests your password" v-on:confirm="bound confirmSign" v-on:close="bound cancelSign">
        <!---->
    </password-modal>
</div>
`;

exports[`DappPage render should render password modal with table if currentRequest is transaction 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input name="url" data-vv-name="url" placeholder="Enter dapp url..." class-name="dapp-form-input" data-vv-as="Dapp url" data-test="dapp-url-input" v-validate="'required|url:require_protocol:true:require_tld:false'" v-model="url" aria-required="true"
                    aria-invalid="false">
                    <div slot="addon" class="control">
                        <button disabled="disabled" data-test="dapp-open-button" v-on:click="bound openDapp" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input>
            </div>
            <!---->
            <!---->
        </div>
    </div>
    <password-modal title="Opened dapp requests your password" v-on:confirm="bound confirmSign" v-on:close="bound cancelSign">
        <transaction-table transaction="[object Object]"></transaction-table>
    </password-modal>
</div>
`;

exports[`DappPage render should render without iframe, modals and errors by default 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input name="url" data-vv-name="url" placeholder="Enter dapp url..." class-name="dapp-form-input" data-vv-as="Dapp url" data-test="dapp-url-input" v-validate="'required|url:require_protocol:true:require_tld:false'" v-model="url" aria-required="true"
                    aria-invalid="false">
                    <div slot="addon" class="control">
                        <button disabled="disabled" data-test="dapp-open-button" v-on:click="bound openDapp" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input>
            </div>
            <!---->
            <!---->
        </div>
    </div>
    <!---->
</div>
`;
